# vegvesen-weather-webserver

./: README.md
src/: CMakeLists.txt  Database.cpp  Database.hpp  Database_test.cpp  vegvesen-weather-webserver.cpp
